# openapi.yml
@@ -110,6 +110,28 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
       security:
         - OAuth2PasswordBearer: []
+  /token/verify:
+    post:
+      summary: Verify Access Token
+      operationId: verify_access_token_token_verify_post
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/VerifyToken'
+        required: true
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
   /token:
     post:
       summary: Login For Access Token
@@ -346,6 +368,15 @@ components:
           type: string
         type:
           title: Error Type
+          type: string
+    VerifyToken:
+      title: VerifyToken
+      required:
+        - access_token
+      type: object
+      properties:
+        access_token:
+          title: Access Token
           type: string
   securitySchemes:
     OAuth2PasswordBearer:
